fix(modal): prevent scrolling and interactions below a modal on mobile

--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -114,6 +114,7 @@ dialog {
     padding-right: var(--scrollbar-width, 0px);
     overflow: hidden;
     pointer-events: none;
+    touch-action: none;
 
     dialog {
       pointer-events: auto;
